# restaurant

restaurant/: Cargo.toml  Rocket.toml  readme.md
restaurant/resource/: 404.html  sleep.html
restaurant/resource/html/: index.html
restaurant/src/: action.rs  http_server.rs  main.rs  order.rs  restaurant.rs  table.rs
restaurant/src/api/: order_api.rs  table_api.rs
restaurant/src/dao/: order.rs  table.rs
restaurant/src/dto/: order_query_request.rs  order_request.rs  table_response.rs
restaurant/src/repository/: order_redis.rs  redis_handler.rs  table_redis.rs
restaurant/src/service/: order_service.rs  table_service.rs
restaurant/src/test/: test_order_service.rs
restaurant/src/util/: datetime_util.rs
restaurant/test/: test_datetime_util.rs  test_order_service.rs
restaurant/test/service/: test_order_service.rs  test_table_service.rs
restaurant/test/util/: test_datetime_util.rs
